# gnome-shell-extension-weather

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
data/: Makefile.am  metadata.json.in  prefs.xml  search.xml
po/: POTFILES.in
src/: Makefile.am  convenience.js  extension.js  metadata.json.in  prefs.glade  prefs.js  prefs.js.in
